kubernetes/apps/kyverno/tests/cli/generate-defaults/generated-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: kyverno-test-defaults
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
