kubernetes/apps/kyverno/tests/cli/generate-defaults/generated-resourcequota.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: default-resourcequota
  namespace: kyverno-test-defaults
spec:
  hard:
    pods: "40"
    persistentvolumeclaims: "10"
    requests.cpu: "4"
    requests.memory: 8Gi
    limits.cpu: "8"
    limits.memory: 16Gi
