kubernetes/apps/kyverno/tests/cli/generate-defaults/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno-test-defaults
  labels:
    kyverno.io/default-resource-controls: "true"
    kyverno.io/default-network-policies: "true"
