kubernetes/apps/kyverno/tests/cli/generate-defaults/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: namespace-defaults-generate
    resources:
      - name: kyverno-test-defaults
        values:
          request.operation: CREATE
